# claude-agentkit3

./: .editorconfig  .env.example  .gitattributes  .gitignore  .installed-manifest.json  .mcp.json  AGENTS.md  CLAUDE.md  HANDOVER.md  Jenkinsfile  ONBOARDING.md  PROJECT_STRUCTURE.md  README.md  pyproject.toml  pyrightconfig.json  sonar-project.properties  start-codex-app-long.cmd  start-codex-app-short.cmd  start-codex-cli-long.cmd  start-codex-cli-short.cmd
.codex/: config.toml  hooks.json
.githooks/: pre-commit
concept/: testing-standards.md
concept-incubator/: INDEX.md
concept/_meta/: assertion-authority.md  authority-prose-baseline.yaml  bc-cut-decisions.md  concept-governance.json  konzept-konsistenz-governance.md  projection-manifest.json  reference-integrity-baseline.yaml  story-ableitungs-methodik.md
concept/domain-design/: 00-uebersicht.md  01-rollen-und-llm-einsatz.md  02-pipeline-orchestrierung.md  03-governance-und-guards.md  04-qualitaetssicherung.md  05-telemetrie-und-metriken.md  06-are-integration.md  07-failure-corpus.md  08-installation-und-bootstrap.md  09-tools-und-skills.md  10-story-lifecycle-und-erstellung.md  11-review-qualitaetsverbesserung.md  12-skills-und-skill-system.md  13-kpis-und-optimierung.md  14-project-management.md  15-task-management.md  16-konzeption-und-konzeptinkubation.md
concept/formal-spec/: README.md
concept/methodology/: software-blutgruppen.md
concept/technical-design/: 00_index.md  01_systemkontext_und_architekturprinzipien.md  02_domaenenmodell_zustaende_artefakte.md  03_konfigurationsmodell_schemas_versionierung.md  04_betrieb_monitoring_audit_runbooks.md  05_integration_stabilization_contract.md  06_truth_boundary_and_concept_code_contract_checker.md  07_komponentenarchitektur_und_architekturkonformanz.md  10_runtime_deployment_speicher.md  11_llm_provider_browser_pools_prompt_execution.md  12_github_integration_repo_operationen.md  13_retrieval_vektordb_wissenszugriff.md  14_telemetrie_eventing_workflow_metriken.md  15_security_secrets_identity_zugriffsmodell.md  16_qa_telemetrie_aggregation_dashboard.md  17_fachliches_datenmodell_ownership.md  18_relationales_abbildungsmodell_postgres.md  20_workflow_engine_state_machine.md  21_story_creation_pipeline.md  22_setup_preflight_worktree_guard_activation.md  23_modusermittlung_exploration_change_frame.md  23a_story_type_mode_terminalitaet.md  24_implementation_runtime_worker_loop.md  24_story_type_mode_terminalitaet.md  25_mandatsgrenzen_feindesign_autonomie.md  25_verify_pipeline_closure_orchestration.md  26_evidence_assembly_review_vorbereitung.md  26_implementation_runtime_worker_loop.md  27_verify_pipeline_closure_orchestration.md  28_evidence_assembly_review_vorbereitung.md  29_closure_sequence.md  30_hook_adapter_guard_enforcement.md  31_branch_guard_orchestrator_guard_artefaktschutz.md  32_dokumententreue_conformance_service.md  33_deterministische_checks_stage_registry_policy_engine.md  34_llm_bewertungen_adversarial_testing_runtime.md  35_integrity_gate_governance_beobachtung_eskalation.md  36_compaction_resilience_prompt_persistence.md  37_verify_context_und_qa_bundle.md  38_verify_feedback_und_doctreue_schleife.md  (+45 more)
frontend/prototype/: .eslintrc.cjs  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.test.json  vitest.config.ts
guardrails/: architecture-guardrails.md  test-execution-efficiency.md  testing-guardrails.md
prompts/: agent-concept-onboarding.md  agent-onboarding.md  bc-glossary-briefing.md  doc-fidelity-feedback.md  qa-adversarial-review.md  qa-conformance-design.md  qa-conformance-goal.md  qa-review.md  vectordb-conflict.md
reports/: AG3-131-ccag-central-owner-design.md  AG3-132-third-party-mediation-design.md  AG3-149-disown-design.md  AG3-150-freeze-admission-design.md  AG3-151-reconcile-quarantine-design.md  AG3-151-reconcile-quarantine-feasibility.md  AG3-152-merge-local-design.md  AG3-153-frontend-takeover-design.md  AG3-154-cli-admin-design.md  AG3-156-verify-evidence-edge-design.md  AG3-157-concept-reference-integrity-design.md  AG3-158-concept-decision-record-gate-design.md  AG3-159-concept-authority-prose-design.md  AG3-160-concept-scope-consistency-design.md  persistence-bc-rearchitecture-design.md
scripts/ci/: check_architecture_conformance.py  check_concept_authority_prose.py  check_concept_code_contracts.py  check_concept_decision_record.py  check_concept_frontmatter.py  check_concept_reference_integrity.py  check_concept_scope_consistency.py  check_remote_gates.ps1  compile_formal_specs.py
scripts/python/: py_loc_to_sonar.py  wait_for_sonar_quality_gate.py
sonar/: ak3-default-gate.json
src/agentkit/: __init__.py  exceptions.py
stories/: README.md  _EXECUTION_PLAN.md  _GLOBAL_ACCEPTANCE.md  _OPEN_DECISIONS.md  _analysis-skill-placeholder-token-vocabulary.md  _bearbeitungsreihenfolge.md  _gap-analyse-schema.md  _priorisierungsempfehlung.md  _review-codex-021-025.md  _story-schnitt-aus-themen.md  _worker-review-rubric.md  agent-skills-gap-analyse.md  analyse-v2-ballast-begruendungen.md  analyse-worker-phases-konzepte.md  artifacts-gap-analyse.md  failure-corpus-gap-analyse.md  governance-and-guards-gap-analyse.md  handover-orchestrator.md  implementation-phase-gap-analyse.md  installation-and-bootstrap-gap-analyse.md  kpi-and-dashboard-gap-analyse.md  pipeline-framework-gap-analyse.md  prompt-runtime-gap-analyse.md  requirements-and-scope-coverage-gap-analyse.md  review-codex-architecture-r1.md  story-closure-gap-analyse.md  story-lifecycle-gap-analyse.md  telemetry-and-events-gap-analyse.md  verify-system-gap-analyse.md
stories/AG3-001-workflow-dsl/: concept.md  review-codex-r1.md  sparring-r1.md  status.yaml  story.md
stories/AG3-002-auth-control-plane/: status.yaml  story.md
stories/AG3-003-sse-live-updates/: status.yaml  story.md
stories/AG3-004-codex-harness-adapter/: status.yaml  story.md
tests/: conftest.py  exploration_change_frame_fixture.py  exploration_worker_result_fixture.py  phase_state_factory.py  story_read_port_stub.py
(+4002 files in other folders)
