[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentkit"
version = "0.1.0"
description = "Deterministic orchestration engine for AI-driven story execution"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Stefan Altenhof" },
]
dependencies = [
    "argon2-cffi>=23.1",
    "pydantic>=2.0",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "pyyaml>=6.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
# Weaviate story-knowledge-base runtime (FK-13 §13.2). Optional: the integration
# adapter guards the import and fails closed when the package is absent.
weaviate = [
    "weaviate-client>=4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.6",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[project.scripts]
agentkit = "agentkit.backend.cli.main:main"
agentkit-hook-claude = "agentkit.harness_client.harness_adapters.claude_code:main"
agentkit-hook-codex = "agentkit.harness_client.harness_adapters.codex.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Parallelize across a BOUNDED worker count (pytest-xdist). ``-n 4`` (never
# ``-n auto``) caps the fan-out at 4 workers: each Postgres-backed worker holds ONE
# pooled DB connection (see postgres_store pool, default max_size=1), so the total
# concurrent DB footprint stays small and the Docker-Desktop userspace port proxy is
# never driven into the multi-core burn that ``-n auto`` (up to 24 workers x
# connect-churn) caused. ``loadfile`` keeps each test file on one worker, so
# module-level fixtures and any not-fully-isolated tests stay safe while files fan
# out across workers. Override with ``-n0`` for a serial run.
addopts = "-n 4 --dist loadfile"
markers = [
    "slow: marks tests as slow",
    "requires_git: marks tests requiring git",
    "requires_gh: marks tests requiring GitHub CLI",
    "unit: unit tests",
    "integration: integration tests",
    "contract: contract/snapshot tests",
    "e2e: end-to-end tests against live systems",
]

[tool.coverage.run]
source = ["agentkit"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.mypy]
strict = true
packages = ["agentkit"]
mypy_path = ["src", "tools"]
plugins = ["pydantic.mypy"]

# Weaviate is an OPTIONAL, untyped dependency (FK-13 §13.2). The integration
# adapter guards its import; mypy must not fail when the package (or its stubs)
# is absent. This is the documented optional-dependency seam, not a blanket
# silence — only the ``weaviate.*`` namespace is exempted.
[[tool.mypy.overrides]]
module = ["weaviate.*"]
ignore_missing_imports = true

[tool.ruff]
src = ["src", "tests"]
target-version = "py312"
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "C90"]

[tool.ruff.lint.mccabe]
# Local proxy for Sonar S3776 (Cognitive Complexity); catches overly complex
# functions in the mandatory ruff pre-push run instead of only via Sonar on Jenkins.
max-complexity = 15

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
